--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Meet Clone</title>
-    <link rel="stylesheet" href="public/style.css" />
+    <link rel="stylesheet" href="public/index.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
